alignment issues fixed

--- a/src/components/atoms/Button/Button.style.scss
+++ b/src/components/atoms/Button/Button.style.scss
@@ -7,6 +7,7 @@
 		background-color: $color-primary;
 		color: #fff;
 		padding: 1.6rem;
+		margin: 0 auto;
 		border: none;
 		border-radius: 0.8rem;
 		font-family: $font-family-primary;
