--- a/src/components/atoms/Link/Link.style.scss
+++ b/src/components/atoms/Link/Link.style.scss
@@ -1,7 +1,8 @@
 @import '../../../styles/_variables.scss';
 
 .header-logo,
-.nav-item {
+.nav-item,
+.footer-nav-item {
 	font-weight: 500;
 	color: $color-black;
 	text-decoration: none;
@@ -19,8 +20,16 @@
 	font-size: $font-size-md;
 }
 
-.nav-item {
+.nav-item,
+.footer-nav-item {
 	list-style: none;
+}
+
+.nav-item {
+	margin-left: 3.2rem;
+}
+
+.footer-nav-item:not(:first-of-type) {
 	margin-left: 3.2rem;
 }
 
