--- a/src/components/molecules/AboutContent/AboutContent.scss
+++ b/src/components/molecules/AboutContent/AboutContent.scss
@@ -1,5 +1,9 @@
 @import '../../../styles/variables';
 
+.about-text {
+	display: flex;
+	flex-direction: column;
+}
 .about-img {
 	width: 100%;
 	&-container {
@@ -11,6 +15,7 @@
 .stats-container {
 	display: flex;
 	flex-direction: row;
+	justify-content: center;
 }
 
 @media only screen and (max-width: 1000px) {
