--- a/src/components/molecules/Carousel/Carousel.style.scss
+++ b/src/components/molecules/Carousel/Carousel.style.scss
@@ -49,3 +49,10 @@
 		width: 100%;
 	}
 }
+
+@media only screen and (max-width: 650px) {
+	.carousel-img {
+		width: 80%;
+		margin: 0 auto;
+	}
+}
