--- a/src/components/molecules/HeroContent/HeroContent.style.scss
+++ b/src/components/molecules/HeroContent/HeroContent.style.scss
@@ -12,3 +12,10 @@
 		display: none;
 	}
 }
+
+@media only screen and (max-width: 400px) {
+	.hero-text {
+		display: flex;
+		flex-direction: column;
+	}
+}
